<resources>
    <string name="app_name">Happy Times</string>
    <string name="title_trusted_persons">Батьки</string>
    <string name="title_schedule">Розклад</string>
    <string name="title_children">Діти</string>
    <string name="title_feedback">Фідбек</string>
    <string name="title_teachers">Педагоги</string>
    <string name="main_menu_title">Список дітей</string>
    <string name="child_data_title">Інформація про дитину</string>
    <string name="sign_in_title">Увійти в обліковий запис</string>
    <string name="sign_up_title">Зареєструватися</string>
    <string name="attendance_title">Присутність на заняттях</string>
    <string name="button_attendance_filter_this_week">Тиждень</string>
    <string name="button_attendance_filter_this_month">Місяць</string>
    <string name="button_attendance_filter_this_year">Рік</string>
    <string name="monday">ПН</string>
    <string name="tuesday">ВТ</string>
    <string name="wednesday">СР</string>
    <string name="thursday">ЧТ</string>
    <string name="friday">ПТ</string>
    <string name="saturday">СБ</string>
    <string name="sunday">НД</string>
    <string name="allergies_title">Алергії</string>
    <string name="diseases_title">Хвороби</string>
    <string name="email_sign_in_textfield">Електронна адреса</string>
    <string name="password_sign_in_textfield">Пароль</string>
    <string name="sign_in_button">Увійти</string>
    <string name="feedback_title">Слідкуйте за новинами в соцмережах</string>
    <string name="trusted_persons_title">Довірені особи</string>
    <string name="parent_title">Батько, на якого зареєстровано акаунт</string>
    <string name="dialog_icon_save_changes">Зберегти</string>
    <string name="emailTextView">Імейл:</string>
    <string name="phoneNumberTextView">Телефон:</string>
    <string name="notice_of_absence">Відмітити відсутність</string>
    <string name="full_name">ПІБ</string>
</resources>