<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ScheduleActivity"
    android:background="@color/main_content_background">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/monthYearTextView"
                android:layout_width="match_parent"
                android:layout_marginVertical="30dp"
                android:layout_height="wrap_content"
                android:text="Грудень, 2023 р."
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/black" />
            <LinearLayout
                android:id="@+id/daysOfWeekLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/monday"
                    android:textColor="@color/gray"
                    android:textAlignment="center"
                    android:textSize="16sp" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tuesday"
                    android:textColor="@color/gray"
                    android:textAlignment="center"
                    android:textSize="16sp" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/wednesday"
                    android:textColor="@color/gray"
                    android:textAlignment="center"
                    android:textSize="16sp" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/thursday"
                    android:textColor="@color/gray"
                    android:textAlignment="center"
                    android:textSize="16sp" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/friday"
                    android:textColor="@color/gray"
                    android:textAlignment="center"
                    android:textSize="16sp" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/saturday"
                    android:textColor="@color/gray"
                    android:textAlignment="center"
                    android:textSize="16sp" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sunday"
                    android:textColor="@color/gray"
                    android:textAlignment="center"
                    android:textSize="16sp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/numbersOfDaysLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="1"
                    android:textColor="@color/gray"
                    android:textAlignment="center"
                    android:textSize="16sp" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="2"
                    android:textColor="@color/gray"
                    android:textAlignment="center"
                    android:textSize="16sp" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="3"
                    android:textColor="@color/gray"
                    android:textAlignment="center"
                    android:textSize="16sp" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="4"
                    android:textColor="@color/gray"
                    android:textAlignment="center"
                    android:textSize="16sp" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="5"
                    android:textColor="@color/gray"
                    android:textAlignment="center"
                    android:textSize="16sp" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="6"
                    android:textColor="@color/gray"
                    android:textAlignment="center"
                    android:textSize="16sp" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="7"
                    android:textColor="@color/gray"
                    android:textAlignment="center"
                    android:textSize="16sp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/scheduleLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewMonday"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent" />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewTuesday"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent" />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewWednesday"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent" />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewThursday"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent" />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewFriday"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent" />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewSaturday"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent" />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewSunday"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/exitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/light_green"
        android:contentDescription="@string/app_name"
        android:src="@drawable/back_icon"
        app:tint="@color/white"
        app:layout_anchor="@id/monthYearTextView"
        app:layout_anchorGravity="top|left|end"
        app:maxImageSize="40dp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>