<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.parents.ParentsFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="100dp">

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="40dp"
                android:layout_marginTop="30dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/parent_title" />
            <LinearLayout
                android:id="@+id/parentLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_corners_diseases_list"
                android:minHeight="50dp"
                android:orientation="vertical"
                android:radius="12dp">

                <include layout="@layout/person_data_block"/>
            </LinearLayout>

            <TextView
                android:id="@+id/textViewTitle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="30dp"
                android:textSize="40dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/trusted_persons_title" />
            <LinearLayout
                android:id="@+id/trustedPersonsLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_corners_diseases_list"
                android:minHeight="50dp"
                android:orientation="vertical"
                android:radius="12dp">

                <include layout="@layout/person_data_block"/>
                <include layout="@layout/person_data_block"/>
                <include layout="@layout/person_data_block"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/parentEditButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/salad_green"
        android:contentDescription="@string/app_name"
        app:tint="@null"
        android:src="@drawable/pencil_edit_icon"
        app:layout_anchor="@id/parentLinearLayout"
        app:layout_anchorGravity="top|right|end"
        app:maxImageSize="40dp" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/trustedPersonsEditButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/salad_green"
        android:contentDescription="@string/app_name"
        app:tint="@null"
        android:src="@drawable/pencil_edit_icon"
        app:layout_anchor="@id/textViewTitle2"
        app:layout_anchorGravity="center|right|end"
        app:maxImageSize="40dp" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>